src/App.css
html {
  min-height: 100%;
}

h2 {
  margin-top: -45%;
  color: white;
}

.anim-circle {
  color: transparent;
  position: absolute;
  top: -28%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background: lightblue;
  animation: animate 5s linear infinite;
}

/*rgba(0, 0, 225, .1)*/

@keyframes animate {
  0% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.486), 0 0 0 30px rgba(188, 237, 243, 0.486), 0 0 0 45px rgba(188, 237, 243, 0.486), 0 0 0 60px rgba(188, 237, 243, 0.486), 0 0 0 75px rgba(188, 237, 243, 0.486);

  }

  50% {
    box-shadow: 0 0 0 25px rgba(188, 237, 243, 0.616), 0 0 0 50px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616), 0 0 0 100px rgba(188, 237, 243, 0.616), 0 0 0 125px rgba(188, 237, 243, 0.616);

  }

  100% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.616), 0 0 0 30px rgba(188, 237, 243, 0.616), 0 0 0 45px rgba(188, 237, 243, 0.616), 0 0 0 60px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616);

  }
}

.anim-fog {
  color: transparent;
  position: absolute;
  /* top: -28%; */
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background: lightblue;
  animation: animate 6s linear infinite;
  /* z-index: 9; */
}

.anim-fog-div {
  background-image: url('./images/fog.png');
  background-position: center;
  background-size: cover;
  height: 43vh;
  position: relative;
  margin-top: -20%;
}



@keyframes animate {
  0% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.486), 0 0 0 30px rgba(188, 237, 243, 0.486), 0 0 0 45px rgba(188, 237, 243, 0.486), 0 0 0 60px rgba(188, 237, 243, 0.486), 0 0 0 75px rgba(188, 237, 243, 0.486);

  }

  50% {
    box-shadow: 0 0 0 25px rgba(188, 237, 243, 0.616), 0 0 0 50px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616), 0 0 0 100px rgba(188, 237, 243, 0.616), 0 0 0 125px rgba(188, 237, 243, 0.616);
    

  }

  100% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.616), 0 0 0 30px rgba(188, 237, 243, 0.616), 0 0 0 45px rgba(188, 237, 243, 0.616), 0 0 0 60px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616);

  }
}

.anim-split-left {
  background: lightblue;
  color: transparent;
  position: absolute;
  top: -28%;
  left: 30%;
  transform: translate(-50%, -50%);
  width: 100px;
  height: 100px;
  /* border-radius: 50%; */
  border-top-left-radius: 100px;
  border-bottom-left-radius: 100px;
  animation: animate 5s linear infinite;

}
@keyframes animate {
  0% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.486), 0 0 0 30px rgba(188, 237, 243, 0.486), 0 0 0 45px rgba(188, 237, 243, 0.486), 0 0 0 60px rgba(188, 237, 243, 0.486), 0 0 0 75px rgba(188, 237, 243, 0.486);

  }

  50% {
    box-shadow: 0 0 0 25px rgba(188, 237, 243, 0.616), 0 0 0 50px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616), 0 0 0 100px rgba(188, 237, 243, 0.616), 0 0 0 125px rgba(188, 237, 243, 0.616);

  }

  100% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.616), 0 0 0 30px rgba(188, 237, 243, 0.616), 0 0 0 45px rgba(188, 237, 243, 0.616), 0 0 0 60px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616);

  }
}

.anim-split-right {
  background: lightblue;
  color: transparent;
  position: absolute;
  top: -28%;
  left: 90%;
  transform: translate(-50%, -50%);
  width: 100px;
  height: 100px;
  /* border-radius: 50%; */
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  animation: animate 5s linear infinite;

}
@keyframes animate {
  0% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.486), 0 0 0 30px rgba(188, 237, 243, 0.486), 0 0 0 45px rgba(188, 237, 243, 0.486), 0 0 0 60px rgba(188, 237, 243, 0.486), 0 0 0 75px rgba(188, 237, 243, 0.486);

  }

  50% {
    box-shadow: 0 0 0 25px rgba(188, 237, 243, 0.616), 0 0 0 50px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616), 0 0 0 100px rgba(188, 237, 243, 0.616), 0 0 0 125px rgba(188, 237, 243, 0.616);

  }

  100% {
    box-shadow: 0 0 0 15px rgba(188, 237, 243, 0.616), 0 0 0 30px rgba(188, 237, 243, 0.616), 0 0 0 45px rgba(188, 237, 243, 0.616), 0 0 0 60px rgba(188, 237, 243, 0.616), 0 0 0 75px rgba(188, 237, 243, 0.616);

  }
}

body {
  background-image: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 17%, rgba(0,212,255,1) 100%);
}

.breathing-tech-container {
  position: absolute;
  margin-top: -22%;
  margin-left: 30%;
  width: 46%;
  /* background: black; */

}

.bt-instructions {
  margin-top: 60%;
}

li {
  color: white;
  font-size: 10pt;
}

.logo {
  height: 4vh;
}

@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap');
.logo-name {
  color: white;
  font-family: 'Baloo Tamma 2', cursive;
  font-size: 30pt;
  margin-left: .7%;
  width: 13%;
}

.nav-container {
  background: rgba(255, 255, 255, 0.411);
  display: flex;
  flex-direction: column;
  width: 19%;
  margin-top: 10%;
  margin-bottom: 10%;
  padding: 2% 1%;
  border-radius: 3%;
}

.nav-element {
  list-style: none;
  display: inline-flex;
  margin: .5% auto;
  padding-bottom: 6%;
}

